[fix] sample layout, [add] menu items

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 <body lang="en">
     <div id="site" style="/* 30px height for top/bot bar */ margin:35px auto;">
 
-        <div id="grid"></div>
-        <div id="typo"></div>
-        <div id="hgroup"></div>
-        <div id="form"></div>
-        <div id="table"></div>
-        <div id="nav"></div>
-        <div id="colours"></div>
+        <section id="grid"     class="textinnerc"        ></section>
+        <section id="typo"     class="overhide"          ></section>
+        <section id="hgroup"   class="clearfix"          ></section>
+        <section id="form"     ></section>
+        <section id="table"    class="fullscale clearfix"></section>
+        <section id="nav"      class="clearfix fullscale"></section>
+        <section id="colours"  ></section>
 
     </div><!--/site-->
 </html>
