--- a/sample/_nav.html
+++ b/sample/_nav.html
@@ -1,73 +1,81 @@
 <h3>Navigation</h3>
 <p><strong>Navs</strong> for top, bottom, and sidebar</p>
 <hr />
-<section id="nav" class="clearfix fullscale posr">
-    <div class="row">
-        <div class="g2 col">
-            <p> simple pagination, using .pagination and nested &lt;a&gt; the top and bot bar are abosolute positioning </p>
-        </div>
-        <div class="g3 col">
-            <h5>.pagination</h5>
-            <div class="pagination">
-                <a href="#" class="back"><<</a>
-                <a href="#">1</a>
-                <a href="#">2</a>
-                <a href="#" class="selected">3</a>
-                <a href="#">4</a>
-                <a href="#">5</a>
-                <a href="#">6</a>
-                <a href="#" class="next">>></a>
-            </div>
-        </div>
-        <div class="g5 col last">
-            <h5>.pagination.clean</h5>
-            <div class="pagination clean">
-                <a href="#" class="back"><<</a>
-                <a href="#">1</a>
-                <a href="#">2</a>
-                <a href="#" class="selected">3</a>
-                <a href="#">4</a>
-                <a href="#">5</a>
-                <a href="#">6</a>
-                <a href="#" class="next">>></a>
-            </div>
-        </div>
-    </div> <!-- end row middle -->
-    <div class="row">
-
+<div class="row">
+    <div class="g2 col">
+        <p> simple pagination, using .pagination and nested &lt;a&gt; the top and bot bar are abosolute positioning </p>
     </div>
-
-    <div class="topbar dark">
-        <a href="#"><h5>topbar.dark</h5></a>
-        <span>
-            <a href="#">dropdown</a>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-            </ul>
-        </span>
-        <a href="#">just testing</a>
-        <form action=""><input type="text" name="submit" placeholder="search"/></form>
-        <a href="#"><img src="#"/></a>
-        <a href="#"><img src="#"/></a>
-        <a href="#"><img src="#"/></a>
-        <a href="#"><img src="#"/></a>
+    <div class="g3 col">
+        <h5>.pagination</h5>
+        <div class="pagination">
+            <a href="#" class="back"><<</a>
+            <a href="#">1</a>
+            <a href="#">2</a>
+            <a href="#" class="selected">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a href="#">6</a>
+            <a href="#" class="next">>></a>
+        </div>
     </div>
-
-    <div class="botbar light">
-        <a href="#"><h5>botbar.light</h5></a>
-        <span>
-            <a href="#">drop-up</a>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-            </ul>
-        </span>
-        <a href="#"> just testing</a>
-        <form action=""><input type="text" name="submit" placeholder="search"/></form>
-        <a href="#"><img src="#"/></a>
-        <a href="#"><img src="#"/></a>
-        <a href="#"><img src="#"/></a>
-        <a href="#"><img src="#"/></a>
+    <div class="g5 col last">
+        <h5>.pagination.clean</h5>
+        <div class="pagination clean">
+            <a href="#" class="back"><<</a>
+            <a href="#">1</a>
+            <a href="#">2</a>
+            <a href="#" class="selected">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a href="#">6</a>
+            <a href="#" class="next">>></a>
+        </div>
     </div>
-</section>
+</div> <!-- end row middle -->
+<div class="row">
+
+</div>
+
+<div class="topbar dark">
+    <a href="#"><h5>topbar.dark</h5></a>
+    <span>
+        <a href="#">Menu</a>
+        <ul>
+            <li><a href="#grid">Grids</a></li>
+            <li><a href="#typo">Typography</a></li>
+            <li><a href="#hgroup">Hgroups</a></li>
+            <li><a href="#form">Forms</a></li>
+            <li><a href="#table">Tables</a></li>
+            <li><a href="#nav">Navigations</a></li>
+            <li><a href="#colours">Colours</a></li>
+        </ul>
+    </span>
+    <a href="#less">Less</a>
+    <form action=""><input type="text" name="submit" placeholder="search"/></form>
+    <a href="#"><img src="#"/></a>
+    <a href="#"><img src="#"/></a>
+    <a href="#"><img src="#"/></a>
+    <a href="#"><img src="#"/></a>
+</div>
+
+<div class="botbar light">
+    <a href="#"><h5>botbar.light</h5></a>
+    <span>
+        <a href="#">Menu</a>
+        <ul>
+            <li><a href="#grid">Grids</a></li>
+            <li><a href="#typo">Typography</a></li>
+            <li><a href="#hgroup">Hgroups</a></li>
+            <li><a href="#form">Forms</a></li>
+            <li><a href="#table">Tables</a></li>
+            <li><a href="#nav">Navigations</a></li>
+            <li><a href="#colours">Colours</a></li>
+        </ul>
+    </span>
+    <a href="#less">Less</a>
+    <form action=""><input type="text" name="submit" placeholder="search"/></form>
+    <a href="#"><img src="#"/></a>
+    <a href="#"><img src="#"/></a>
+    <a href="#"><img src="#"/></a>
+    <a href="#"><img src="#"/></a>
+</div>
