[add] ico img sample to navigation bars, [fix] sample layout markups for form.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
     <meta name="author"      content="" />
         
     <title></title>
-
+    
+    <style type="text/css">
+        .demohide {
+            height:90px;
+            margin-bottom:5px;
+            overflow:hidden;
+        }
+    </style>
 
     <script language="javascript" type="text/javascript">
         $(document).ready(function() {
