--- a/sample/_form.html
+++ b/sample/_form.html
@@ -1,7 +1,7 @@
 <h3>forms</h3>
+<p><strong>Simple form styles</strong> easily applied</p>
 <hr />
 <legend>legend</legend>
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus.</p>
 <h4>Form Element</h4>
 <div class="col g3">
     <fieldset>
