--- a/sample/_nav.html
+++ b/sample/_nav.html
@@ -52,10 +52,10 @@
     </span>
     <a href="#less">Less</a>
     <form action=""><input type="text" name="submit" placeholder="search"/></form>
-    <a href="#"><img src="#"/></a>
-    <a href="#"><img src="#"/></a>
-    <a href="#"><img src="#"/></a>
-    <a href="#"><img src="#"/></a>
+    <a href="#"><img src="sample/img/ico_fb.png"/></a>
+    <a href="#"><img src="sample/img/ico_fl.png"/></a>
+    <a href="#"><img src="sample/img/ico_tw.png"/></a>
+    <a href="#"><img src="sample/img/ico_yo.png"/></a>
 </div>
 
 <div class="botbar light">
@@ -74,8 +74,8 @@
     </span>
     <a href="#less">Less</a>
     <form action=""><input type="text" name="submit" placeholder="search"/></form>
-    <a href="#"><img src="#"/></a>
-    <a href="#"><img src="#"/></a>
-    <a href="#"><img src="#"/></a>
-    <a href="#"><img src="#"/></a>
+    <a href="#"><img src="sample/img/ico_fb.png"/></a>
+    <a href="#"><img src="sample/img/ico_fl.png"/></a>
+    <a href="#"><img src="sample/img/ico_tw.png"/></a>
+    <a href="#"><img src="sample/img/ico_yo.png"/></a>
 </div>
