--- a/sample/_nav.html
+++ b/sample/_nav.html
@@ -50,7 +50,9 @@
             <li><a href="#colours">Colours</a></li>
         </ul>
     </span>
-    <a href="#less">Less</a>
+    <span><a href="#less">Utility</a></span>
+    <span><a href="#mixing">Mixing</a></span>
+    <span><a href="#guide">Guide</a></span>
     <form action=""><input type="text" name="submit" placeholder="search"/></form>
     <a href="#"><img src="sample/img/ico_fb.png"/></a>
     <a href="#"><img src="sample/img/ico_fl.png"/></a>
@@ -72,7 +74,9 @@
             <li><a href="#colours">Colours</a></li>
         </ul>
     </span>
-    <a href="#less">Less</a>
+    <span><a href="#less">Utility</a></span>
+    <span><a href="#mixing">Mixing</a></span>
+    <span><a href="#guide">Guide</a></span>
     <form action=""><input type="text" name="submit" placeholder="search"/></form>
     <a href="#"><img src="sample/img/ico_fb.png"/></a>
     <a href="#"><img src="sample/img/ico_fl.png"/></a>
