[add] small tag styles to headings

--- a/sample/_typo.html
+++ b/sample/_typo.html
@@ -25,8 +25,25 @@
     <h6>Heading 6</h6>
 </div>
 <div class="col g4 last">
-    <p class="justify">
-    <strong>Curabitur</strong> <i>sit amet leo in nisl ullamcorper imperdiet in quis ipsum. Aenean consequat porta odio,</i> eget porttitor tortor tristique nec. Curabitur aliquet sapien eget nunc condimentum nec tincidunt nisl blandit. Suspendisse potenti. Praesent dolor leo, mollis non lobortis in, consequat sed nisi. Proin vel orci augue, ut commodo erat. Nullam non tincidunt nunc. In turpis tellus, placerat eu fringilla sit amet, molestie egestas urna. Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. 
-    </p>
+    <h1>H1<small>small</small></h1>
+    <h2>H2<small>small</small></h2>
+    <h3>H3<small>small</small></h3>
+    <h4>H4<small>small</small></h4>
+    <h5>H5<small>small</small></h5>
+    <h6>H6<small>small</small></h6>
 </div>
 <div class="row"><h1 class="gigantic">.gigantic</h1></div>
+<br />
+<div class="row">
+    <div class="g3 col">
+    <p class="justify"> <strong>Curabitur</strong> <i>sit amet leo in nisl ullamcorper imperdiet in quis ipsum. Aenean consequat porta odio,</i> eget porttitor tortor tristique nec. Curabitur aliquet sapien eget nunc condimentum nec tincidunt nisl blandit. Suspendisse potenti. Praesent dolor. Proin vel orci augue, ut commodo erat. Nullam non tincidunt nunc. In turpis tellus, placera</p>
+    <p>Nullam non tincidunt nunc. In turpis tellus, placerat eu fringilla sit amet, molestie egestas urna. Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+    </div>
+    <div class="g7 col">
+    <p class="justify">Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+    </div>
+    <div class="g2 col last">
+    <p class="justify">Praesent dolor leo, mollis non lobortis in, consequat sed nisi. Proin vel orci augue, ut commodo erat. Nullam non tincidunt nunc. In turpis tellus, placerat eu fringilla sit amet, molestie egestas urna. Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+
+    </div>
+</div>
