--- a/sample/_nav.html
+++ b/sample/_nav.html
@@ -2,10 +2,10 @@
 <p><strong>Navs</strong> for top, bottom, and sidebar</p>
 <hr />
 <div class="row">
-    <div class="g2 col">
+    <div class="g3 col">
         <p> simple pagination, using .pagination and nested &lt;a&gt; the top and bot bar are abosolute positioning </p>
     </div>
-    <div class="g3 col">
+    <div class="g4 col">
         <h5>.pagination</h5>
         <div class="pagination">
             <a href="#" class="back"><<</a>
@@ -32,9 +32,6 @@
         </div>
     </div>
 </div> <!-- end row middle -->
-<div class="row">
-
-</div>
 
 <div class="topbar dark">
     <a href="#"><h5>topbar.dark</h5></a>
@@ -52,7 +49,7 @@
     </span>
     <span><a href="#less">Utility</a></span>
     <span><a href="#mixing">Mixing</a></span>
-    <span><a href="#guide">Guide</a></span>
+    <span><a href="#plugin">Plugins</a></span>
     <form action=""><input type="text" name="submit" placeholder="search"/></form>
     <a href="#"><img src="sample/img/ico_fb.png"/></a>
     <a href="#"><img src="sample/img/ico_fl.png"/></a>
@@ -76,7 +73,7 @@
     </span>
     <span><a href="#less">Utility</a></span>
     <span><a href="#mixing">Mixing</a></span>
-    <span><a href="#guide">Guide</a></span>
+    <span><a href="#plugin">Plugins</a></span>
     <form action=""><input type="text" name="submit" placeholder="search"/></form>
     <a href="#"><img src="sample/img/ico_fb.png"/></a>
     <a href="#"><img src="sample/img/ico_fl.png"/></a>
