--- a/sample/_form.html
+++ b/sample/_form.html
@@ -128,3 +128,18 @@
     </form>
     <div class="clear"></div>
 </div>
+<form action="">
+<button class="blue large">button</button>
+<button class="yellow bigger">button</button>
+<button class="green big">button</button>
+<button class="orange strong">button</button>
+<button class="pink small">button</button>
+<button class="small red">button</button>
+<button>button</button> <br />
+<button class="pill">button</button>
+<button class="pill">button</button>
+<button class="pill">button</button> <br />
+<button class="sky">sky</button>
+<button class="lime">lime</button>
+<button class="primary">primary</button>
+</form>
