--- a/sample/_typo.html
+++ b/sample/_typo.html
@@ -34,16 +34,35 @@
 </div>
 <div class="row"><h1 class="gigantic">.gigantic</h1></div>
 <br />
-<div class="row">
+<div class="row justify">
     <div class="g3 col">
-    <p class="justify"> <strong>Curabitur</strong> <i>sit amet leo in nisl ullamcorper imperdiet in quis ipsum. Aenean consequat porta odio,</i> eget porttitor tortor tristique nec. Curabitur aliquet sapien eget nunc condimentum nec tincidunt nisl blandit. Suspendisse potenti. Praesent dolor. Proin vel orci augue, ut commodo erat. Nullam non tincidunt nunc. In turpis tellus, placera</p>
-    <p>Nullam non tincidunt nunc. In turpis tellus, placerat eu fringilla sit amet, molestie egestas urna. Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+        <p> <strong>Curabitur</strong> <i>sit amet leo in nisl ullamcorper imperdiet in quis ipsum. Aenean consequat porta odio,</i> eget porttitor tortor tristique nec. Curabitur aliquet sapien eget nunc condimentum nec tincidunt nisl blandit. Suspendisse potenti. Praesent dolor. Proin vel orci augue, ut commodo erat. Nullam non tincidunt nunc. In turpis tellus, placera</p>
+        <p>Nullam non tincidunt nunc. In turpis tellus, placerat eu fringilla sit amet, molestie egestas urna. Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
     </div>
     <div class="g7 col">
-    <p class="justify">Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+        <p>Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+        <p>Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+        <div class="row">
+            <div class="g6 col">
+                <p>Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+            </div>
+            <div class="g6 col last">
+                <p>Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="g3 col">
+                <p>congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+            </div>
+            <div class="g4 col">
+                <p>In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+            </div>
+            <div class="g5 col last">
+                <p>ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+            </div>
+        </div>
     </div>
     <div class="g2 col last">
-    <p class="justify">Praesent dolor leo, mollis non lobortis in, consequat sed nisi. Proin vel orci augue, ut commodo erat. Nullam non tincidunt nunc. In turpis tellus, placerat eu fringilla sit amet, molestie egestas urna. Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
-
+        <p>Praesent dolor leo, mollis non lobortis in, consequat sed nisi. Proin vel orci augue, ut commodo erat. Nullam non tincidunt nunc. In turpis tellus, placerat eu fringilla sit amet, molestie egestas urna. Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
     </div>
 </div>
