[add typo sample]

--- a/sample/_typo.html
+++ b/sample/_typo.html
@@ -36,20 +36,21 @@
 <br />
 <div class="row justify">
     <div class="g3 col">
-        <p> <strong>Curabitur</strong> <i>sit amet leo in nisl ullamcorper imperdiet in quis ipsum. Aenean consequat porta odio,</i> eget porttitor tortor tristique nec. Curabitur aliquet sapien eget nunc condimentum nec tincidunt nisl blandit. Suspendisse potenti. Praesent dolor. Proin vel orci augue, ut commodo erat. Nullam non tincidunt nunc. In turpis tellus, placera</p>
-        <p>Nullam non tincidunt nunc. In turpis tellus, placerat eu fringilla sit amet, molestie egestas urna. Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+        <p>Nullam non tincidunt nunc. In turpis tellus, placerat eu fringilla sit amet, molestie egestas urna. Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue.</p>
+        <p class="dropcap">Lorem ipsum <em>emphasised text</em> dolor sit amet, <strong> strong text</strong> consectetur , <abbr title="">abbreviated text</abbr> sed do exercitation <a href="/">link text</a> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute <ins>inserted text</ins> irure dolor fugiat<code>pariatur. Excepteur sint occaecat code text</code> cupidatat non proident.</p> 
     </div>
     <div class="g7 col">
         <p>Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
-        <p>Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+        <pre>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.</pre>
         <div class="row">
             <div class="g6 col">
-                <p>Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+                <pre><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.</p></pre>
             </div>
             <div class="g6 col last">
-                <p>Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
+                <p>Lorem <sup>superscript</sup> dolor <sub>subscript</sub> amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. <cite>cite</cite>. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at.<acronym title="National Basketball Association">NBA</acronym> Mauris a ante. Suspendisse quam sem,<abbr title="Avenue">AVE</abbr></p>
             </div>
         </div>
+
         <div class="row">
             <div class="g3 col">
                 <p>congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
@@ -66,3 +67,71 @@
         <p>Praesent dolor leo, mollis non lobortis in, consequat sed nisi. Proin vel orci augue, ut commodo erat. Nullam non tincidunt nunc. In turpis tellus, placerat eu fringilla sit amet, molestie egestas urna. Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
     </div>
 </div>
+<hr />
+<div class="row">
+    <div class="g3 col">
+        <h5>Unordered <code>&lt;ul&gt;</code></h5>
+        <ul>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Consectetur adipiscing elit</li>
+            <li>Integer molestie lorem at massa</li>
+            <li>Facilisis in pretium nisl aliquet</li>
+            <li>Nulla volutpat aliquam velit
+            <ul>
+                <li>Phasellus iaculis neque</li>
+                <li>Purus sodales ultricies</li>
+                <li>Vestibulum laoreet porttitor sem</li>
+                <li>Ac tristique libero volutpat at</li>
+            </ul>
+            </li>
+            <li>Faucibus porta lacus fringilla vel</li>
+            <li>Aenean sit amet erat nunc</li>
+            <li>Eget porttitor lorem</li>
+        </ul>
+    </div>
+    <div class="g3 col">
+        <h5>Unstyled <code>&lt;ul.unstyled&gt;</code></h5>
+        <ul class="unstyled">
+            <li>Consectetur adipiscing elit</li>
+            <li>Facilisis in pretium nisl aliquet</li>
+            <li>Nulla volutpat aliquam velit
+            <ul>
+                <li>Phasellus iaculis neque</li>
+                <li>Purus sodales ultricies</li>
+                <li>Vestibulum laoreet porttitor sem</li>
+                <li>Ac tristique libero volutpat at</li>
+            </ul>
+            </li>
+            <li>Faucibus porta lacus fringilla vel</li>
+            <li>Aenean sit amet erat nunc</li>
+            <li>Eget porttitor lorem</li>
+        </ul>
+    </div>
+    <div class="g3 col">
+        <h5>Ordered <code>&lt;ol&gt;</code></h5>
+        <ol>
+            <li>Consectetur adipiscing elit</li>
+            <li> Integer molestie lorem at massa
+                <ol>
+                    <li>Aenean sit amet erat nunc</li>
+                    <li>Eget porttitor lorem</li>
+                </ol>
+            </li>
+            <li>Aenean sit amet erat nunc</li>
+            <li>Eget porttitor lorem</li>
+        </ol>
+    </div>
+    <div class="g3 col last">
+        <h5>Description <code>dl</code></h5>
+        <dl>
+            <dt>Description lists</dt>
+            <dd>A description list is perfect for defining terms.</dd>
+            <dt>Euismod</dt>
+            <dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
+            <dd>Donec id elit non mi porta gravida at eget metus.</dd>
+            <dt>Malesuada porta</dt>
+            <dd>Etiam porta sem malesuada magna mollis euismod.</dd>
+        </dl>
+    </div>
+</div>
+
